--- a/index.html
+++ b/index.html
@@ -6,8 +6,44 @@
     <title>GithubPages</title>
 </head>
 <body>
-    <h1>GithubPages</h1>
-    <h2>HEllo! <i>測試成功</i></h2>
+    <div style="background-color: coral;">
+        <h1>GithubPages</h1>
+        <h2>HEllo! <i>測試成功</i></h2>
+    </div>
     
+
+    <h1>個人帳號各專案建立 Github Pages</h1> 
+
+    <p>簡略流程
+    開啟 github 建立 new repository --> git clone 專案於電腦 --> </br>
+    專案建立 index.html --> git commit 專案 --> </br>
+    git 簽出至，並建立新分支 "gh-pages" ，並推送 --> </br>
+    專案 setting 選項內容下方 GitHub Pages 區塊開啟專案網頁('https://帳號.github.io/專案名/')</p> 
+
+    <h3>開啟 github 建立 new repository，git clone 專案於電腦</h3> 
+    <img src="https://i.imgur.com/PFMxCa8.png" width="500px"></img>
+
+    <h3>專案建立 index.html</h3> 
+    <img src="https://i.imgur.com/ADpg324.png" width="500px"></img>
+
+    <h3>git commit 專案完成後 ， git 簽出至，並建立新分支 "gh-pages"，再次推送</h3> 
+    <img src="https://i.imgur.com/y3vr0TE.png" width="500px"></img>
+    </br>
+    <img src="https://i.imgur.com/Nue3YAJ.png" width="500px"></img>
+    </br>
+    <img src="https://i.imgur.com/OFcq8ev.png" width="500px"></img>
+    </br>
+    <img src="https://i.imgur.com/pzBsByJ.png" width="500px"></img>
+
+    <h3>專案 setting 選項內容下方 GitHub Pages 區塊開啟專案網頁('https://帳號.github.io/專案名/')</h3> 
+    <img src="https://i.imgur.com/bXixA32.png" width="500px"></img>
+    </br>
+    <img src="https://i.imgur.com/r9x83YE.png" width="500px"></img>
+
+
+    <h3>成功完成，可以開始寫code改畫面了</h3> 
+    <img src="https://i.imgur.com/SwlBOkI.png" width="400px"></img>
+
+        
 </body>
 </html>
